--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,8 @@ html, body {
 
 body {
   margin: 25px auto;
-  max-width: 700px;
+  /* margin: 25px 10px 10px 10px; */ /* top right bottom left */
+  max-width: 800px; /* width of the element */
   font-family: 'Open Sans', sans-serif;
   font-size: 16;
   line-height: 1.6;
@@ -63,7 +64,7 @@ navbar li{
 navbar li a {
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 16px; /* top right bottom left */
     text-decoration: none;
     display:inline-block;
 }
@@ -78,11 +79,72 @@ navbar li p {
 }
 
 navbar li a.active {
-    background-color: #633517;
+    background-color: #8B4513 /* #633517 */ ;
     color: white;
 }
 
 navbar li a:hover:not(.active) {
     background-color: #8B4513;
 }
+
+/* search bar */
+navbar input[type=text] {
+  float: right;
+  text-align: left;
+  width: 15%; /* control search box size */
+  padding: 5px 0;
+  margin: 10px 1px 10px 1px;
+  display:inline-block;
+  font-size: 15px;
+  box-sizing: border-box;
+  /* border: none;
+  margin-top: 8px;
+  margin-right: 1px;
+  margin-left: 60px;
+  font-size: 16px; */
+}
+
+/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+/*
+@media screen and (max-width: 600px) {
+  .topnav a, .topnav input[type=text] {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;
+  }
+}
+
+.searchbar {
+  float: left;
+  margin: 0px 0;
+}
+*/
 /* navigation bar ends here */
+
+
+/* back to top button */
+#topbutton {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: #633517; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 12px; /* Some padding */
+  border-radius: 15px; /* Rounded corners */
+  font-size: 16px; /* Increase font size */
+}
+
+#topbutton:hover {
+  background-color: #8B4513; /* Add a dark-grey background on hover */
+}
