--- a/css/main.css
+++ b/css/main.css
@@ -148,3 +148,10 @@ navbar input[type=text] {
 #topbutton:hover {
   background-color: #8B4513; /* Add a dark-grey background on hover */
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 300px; /* to keep aspect ratio of image. */
+}
