--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,10 @@ html, body {
 }
 
 body {
-  margin: 25px auto;
+  margin-left: auto;
+  margin-right: auto;
   /* margin: 25px 10px 10px 10px; */ /* top right bottom left */
-  max-width: 800px; /* width of the element */
+  max-width: 780px; /* width of the element */
   font-family: 'Open Sans', sans-serif;
   font-size: 16;
   line-height: 1.6;
